--- a/backend/package.json
+++ b/backend/package.json
@@ -21,9 +21,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4",
-    "eslint": "^8.57.0",
     "@eslint/js": "^8.57.0",
-    "globals": "^15.0.0"
+    "eslint": "^8.57.0",
+    "globals": "^15.0.0",
+    "nodemon": "^3.1.10"
   }
 }
