--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,14 +17,16 @@
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
     "@eslint/js": "^8.57.0",
+    "@tailwindcss/postcss": "^4.1.16",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "globals": "^15.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16",
     "vite": "^5.1.3"
   }
 }
-
-
