--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
-    "globals": "^15.0.0"
+    "globals": "^15.0.0",
+    "nodemon": "^3.1.0"
   }
 }
