--- a/backend/env.example
+++ b/backend/env.example
@@ -1,8 +1,10 @@
 # Server
-PORT=4000
+PORT=
 
 # Database
-MONGO_URI=mongodb://127.0.0.1:27017/smartattendance
+# Local MongoDB: 
+# MongoDB Atlas: 
+MONGO_URI=
 
 # JWT Secret (thay đổi trong production, tối thiểu 32 ký tự)
 JWT_SECRET=
