--- a/backend/env.example
+++ b/backend/env.example
@@ -9,6 +9,14 @@ MONGO_URI=
 # JWT Secret (thay đổi trong production, tối thiểu 32 ký tự)
 JWT_SECRET=
 
-# JWT Expiration ( Để nguyên không cần thay đổi )
+# JWT Expiration 
 JWT_EXPIRES_IN=7d
+
+# Email Configuration (for OTP)
+# For Gmail: Enable "Less secure app access" or use App Password
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password
 
