--- a/backend/env.example
+++ b/backend/env.example
@@ -14,8 +14,8 @@ JWT_EXPIRES_IN=7d
 
 # Email Configuration (for OTP)
 # For Gmail: Enable "Less secure app access" or use App Password
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
+EMAIL_HOST=
+EMAIL_PORT=
 EMAIL_SECURE=false
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-password
