--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.552.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1"
