--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.552.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
