--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,12 @@
 .env.local
 .env.*.local
 
-# Logs
-logs
+# Logs (only ignore log files, not code folders)
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+**/logs/*.log
 
 # Coverage
 coverage/
