Add attendance analytics and export functionality; integrate XLSX for report generation

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^7.0.10",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
