--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "devDependencies": {
     "concurrently": "^9.0.1"
+  },
+  "dependencies": {
+    "googleapis": "^166.0.0",
+    "multer": "^2.0.2"
   }
 }
-
-
