--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.552.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-is": "^19.2.0",
     "react-router-dom": "^6.22.1",
     "recharts": "^3.4.1",
     "sonner": "^2.0.7",
