--- a/backend/env.example
+++ b/backend/env.example
@@ -13,3 +13,11 @@ EMAIL_USER=
 EMAIL_PASS=
 # EMAIL_DEV_MODE=true
 
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+
+# Azure Face API Configuration
+AZURE_FACE_ENDPOINT=
+AZURE_FACE_KEY=your_azure_face_api_key
