--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.552.0",
     "react": "^18.2.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^18.2.0",
     "react-is": "^19.2.0",
     "react-router-dom": "^6.22.1",
