--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,9 @@
   "devDependencies": {
     "@eslint/js": "^8.57.0",
     "@tailwindcss/postcss": "^4.1.16",
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
@@ -36,6 +39,7 @@
     "globals": "^15.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16",
+    "typescript": "^5.3.3",
     "vite": "^5.1.3"
   }
 }
