set up socket.io

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,9 +1,16 @@
 # Database
 MONGO_URI=
+
+# Server Configuration
+PORT=
+
 # JWT Secret (thay đổi trong production, tối thiểu 32 ký tự)
 JWT_SECRET=
 # JWT Expiration ( Để nguyên không cần thay đổi )
 JWT_EXPIRES_IN=7d
+
+# Socket.io Configuration
+FRONTEND_URL=
 
 # Email Configuration (for OTP)
 EMAIL_HOST=smtp.gmail.com
@@ -18,6 +25,3 @@ CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
-# Azure Face API Configuration
-AZURE_FACE_ENDPOINT=
-AZURE_FACE_KEY=your_azure_face_api_key
