--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -6,15 +6,15 @@ on:
       - main
       - master
     paths:
-      - 'backend/**'
-      - '.github/workflows/deploy-backend.yml'
+      - "backend/**"
+      - ".github/workflows/deploy-backend.yml"
   workflow_dispatch: # Cho phép chạy thủ công từ GitHub UI
 
 jobs:
   deploy:
     name: Deploy Backend
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -28,7 +28,7 @@ jobs:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         run: |
           flyctl deploy --remote-only
-          
+
       - name: Verify deployment
         working-directory: ./backend
         env:
@@ -36,4 +36,3 @@ jobs:
         run: |
           echo "✅ Deployment completed successfully!"
           flyctl status --app smartattendance-backend
-
