--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^9.0.1"
   },
   "dependencies": {
+    "baseline-browser-mapping": "^2.9.12",
     "react-day-picker": "^9.11.1"
   }
 }
