--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,8 +1,8 @@
 # Fly.io app configuration file
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+# See https://fly.io/docs/reference/configuration/
 
 app = "smartattendance-backend"
-primary_region = "sin"  # Singapore region (gần Việt Nam nhất)
+primary_region = "sin"  # Singapore (gần Việt Nam)
 
 [build]
 
@@ -13,42 +13,27 @@ primary_region = "sin"  # Singapore region (gần Việt Nam nhất)
 [http_service]
   internal_port = 4000
   force_https = true
+
+  # Keep the app always on (good for production)
   auto_stop_machines = false
   auto_start_machines = true
   min_machines_running = 1
-  processes = ["app"]
 
-[[services]]
-  protocol = "tcp"
-  internal_port = 4000
-
-  [[services.ports]]
-    port = 80
-    handlers = ["http"]
-    force_https = true
-
-  [[services.ports]]
-    port = 443
-    handlers = ["tls", "http"]
-
-  # Health check
-  [services.concurrency]
-    type = "connections"
-    hard_limit = 1000
+  # Concurrency limits
+  [http_service.concurrency]
+    type = "requests"
     soft_limit = 500
+    hard_limit = 1000
 
-  [[services.http_checks]]
+  # Health check (HTTP)
+  [[http_service.checks]]
     interval = "10s"
     timeout = "2s"
     grace_period = "5s"
     method = "GET"
     path = "/api/health"
-    protocol = "http"
-    tls_skip_verify = false
 
 [[vm]]
   cpu_kind = "shared"
   cpus = 1
   memory_mb = 512
-
-
