Update Fly.io configuration to disable auto-start for machines
- Changed auto_start_machines setting from true to false in fly.toml.
- This adjustment ensures that machines do not automatically start, enhancing control over resource management.

--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -16,7 +16,7 @@ primary_region = "sin"  # Singapore (gần Việt Nam)
 
   # Keep the app always on (good for production)
   auto_stop_machines = false
-  auto_start_machines = true
+  auto_start_machines = false
   min_machines_running = 1
 
   # Concurrency limits
