Add face recognition feature and related configurations
- Implemented face registration and verification functionalities, allowing users to register their faces for attendance.
- Introduced new backend scripts for migrating face data and backfilling position keys in the salary matrix.
- Enhanced payroll management with a new salary history model to track changes in user salaries.
- Updated frontend components to support face registration, including a dedicated page and integration with TensorFlow.js for face detection.
- Added new environment variables for AI service configuration and updated .gitignore to include relevant directories.
- Improved localization for face registration and related terms in both English and Vietnamese.
- Refactored existing services and models to accommodate new features while ensuring backward compatibility.

--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,13 @@ coverage/
 .idea/
 Thumbs.db
 
+# Agent configuration
+.agent/
+
+# Cursor IDE
+.cursor/commands/
+
+# Shared UI/UX
+.shared/ui-ux-pro-max/
+
 
