--- a/backend/env.example
+++ b/backend/env.example
@@ -25,3 +25,10 @@ CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
+# AI Service Configuration
+AI_SERVICE_URL=http://localhost:8000
+AI_SERVICE_API_KEY=your-secret-api-key-here
+ENABLE_FACE_RECOGNITION=true
+FACE_VERIFICATION_THRESHOLD=0.6
+AI_SERVICE_TIMEOUT=5000
+
