--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@tensorflow-models/face-landmarks-detection": "^1.0.6",
+    "@tensorflow/tfjs": "^4.21.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "clsx": "^2.1.1",
