--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
-  "buildCommand": "yarn workspace frontend build",
+  "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/dist",
-  "installCommand": "yarn install",
+  "installCommand": "npm install --prefix frontend",
   "framework": "vite",
   "rewrites": [
     {
@@ -22,4 +22,3 @@
     }
   ]
 }
-
