Update frontend dependencies and assets
- Added @mediapipe/face_detection and @mediapipe/face_mesh dependencies in package.json.
- Removed external references to @mediapipe libraries in vite.config.js.
- Introduced a new icon-192.png file for the application.
- Updated manifest.json to reference the new icon file paths.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@mediapipe/face_detection": "^0.4.1644680013",
+    "@mediapipe/face_mesh": "^0.4.1633559619",
     "@tensorflow-models/face-landmarks-detection": "^1.0.6",
     "@tensorflow/tfjs": "^4.21.0",
     "axios": "^1.9.0",
