--- a/ai-service/fly.toml
+++ b/ai-service/fly.toml
@@ -1,28 +1,34 @@
-app = "smartattendance-ai"
-primary_region = "sin"
+# fly.toml app configuration file generated for smartattendance-ai on 2026-01-21T08:55:55+07:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'smartattendance-ai'
+primary_region = 'sin'
 
 [build]
-  dockerfile = "Dockerfile"
+  dockerfile = 'Dockerfile'
 
 [env]
-  PORT = "8080"
-  HOST = "0.0.0.0"
-  MODEL_NAME = "buffalo_l"
-  DETECTION_THRESHOLD = "0.5"
-  VERIFICATION_THRESHOLD = "0.6"
+  DETECTION_THRESHOLD = '0.5'
+  HOST = '0.0.0.0'
+  MODEL_NAME = 'buffalo_l'
+  PORT = '8080'
+  VERIFICATION_THRESHOLD = '0.6'
+
+[[mounts]]
+  source = 'ai_models'
+  destination = '/app/models'
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = false
+  auto_stop_machines = 'off'
   auto_start_machines = true
   min_machines_running = 1
 
 [[vm]]
-  memory = "2048"
-  cpu_kind = "shared"
+  memory = '2048'
+  cpu_kind = 'shared'
   cpus = 1
-
-[[mounts]]
-  source = "ai_models"
-  destination = "/app/models"
+  memory_mb = 2048
