Enhance AI service configuration and model loading
- Updated Dockerfile to include additional dependencies for model execution.
- Modified fly.toml to add new environment variables for development and logging.
- Changed requirements.txt to use opencv-python-headless for compatibility.
- Refactored run.py to enable dynamic reload based on environment settings.
- Implemented background model loading in main.py to improve startup performance.
- Enhanced API key verification in face_router.py to support insecure authentication for development.
- Adjusted model_loader.py to import insightface conditionally and set model root directory.
- Updated config.py to load environment variables and define model root path.

--- a/ai-service/fly.toml
+++ b/ai-service/fly.toml
@@ -10,10 +10,16 @@ primary_region = 'sin'
   dockerfile = 'Dockerfile'
 
 [env]
+  ALLOW_INSECURE_AUTH = 'true'
+  API_KEY = 'dev-api-key-change-in-production'
   DETECTION_THRESHOLD = '0.5'
+  DISPLAY = ''
   HOST = '0.0.0.0'
+  INSIGHTFACE_HOME = '/app/models'
+  LOG_LEVEL = 'INFO'
   MODEL_NAME = 'buffalo_l'
   PORT = '8080'
+  QT_QPA_PLATFORM = 'offscreen'
   VERIFICATION_THRESHOLD = '0.6'
 
 [[mounts]]
