--- a/ai-service/Dockerfile
+++ b/ai-service/Dockerfile
@@ -3,6 +3,10 @@ WORKDIR /app
 
 RUN apt-get update && apt-get install -y \
     build-essential \
+    libglib2.0-0 \
+    libgomp1 \
+    libxcb1 \
+    libx11-6 \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
