--- a/ai-service/requirements.txt
+++ b/ai-service/requirements.txt
@@ -6,7 +6,7 @@ pydantic>=2.9.0
 pydantic-settings>=2.5.0
 
 # Computer Vision & ML
-opencv-python>=4.9.0,<5.0
+opencv-python-headless>=4.9.0,<5.0
 numpy>=1.26.0
 pillow==11.0.0
 onnxruntime==1.23.2
