Enhance project configuration and AI service integration
- Updated package.json to include new scripts for AI service development and build processes.
- Modified README.md to reflect changes in environment setup for the AI service.
- Adjusted backend configuration to point AI service URL to the correct port.
- Refactored face detection service to improve image validation and processing logic.
- Added new dependencies for enhanced face quality checks and validation.
- Removed outdated documentation files to streamline project structure.

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,5 +1,9 @@
 # Server Port 
 VITE_PORT=
 
-# API & Socket.io Server URL 
+# API & Socket.io Server URL
 VITE_API_URL=
+
+# Chatbot Configuration (migrated to RAG system)
+VITE_CHATBOT_ENABLED=true
+VITE_RAG_SERVICE_URL=http://localhost:8001
