--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "frontend"
   ],
   "scripts": {
-    "dev": "concurrently \"yarn workspace backend dev\" \"yarn workspace frontend dev\"",
-    "concurrent": "concurrently \"yarn workspace backend dev\" \"yarn workspace frontend dev\"",
     "dev:backend": "yarn workspace backend dev",
     "dev:frontend": "yarn workspace frontend dev",
-    "build": "yarn workspace frontend build"
+    "dev:ai": "cd ai-service && DEV_MODE=true python run.py",
+    "build": "yarn workspace frontend build",
+    "build:all": "yarn workspace backend build && yarn workspace frontend build"
   },
   "devDependencies": {
-    "concurrently": "^9.0.1"
   },
   "dependencies": {
     "baseline-browser-mapping": "^2.9.12",
