--- a/backend/env.example
+++ b/backend/env.example
@@ -26,9 +26,19 @@ CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
 # AI Service Configuration
-AI_SERVICE_URL=http://localhost:8000
+AI_SERVICE_URL=http://localhost:8001
 AI_SERVICE_API_KEY=your-secret-api-key-here
 ENABLE_FACE_RECOGNITION=true
 FACE_VERIFICATION_THRESHOLD=0.6
 AI_SERVICE_TIMEOUT=5000
+
+# RAG Chatbot Configuration (migrated from old Gemini chatbot)
+# Old chatbot configuration - DISABLED
+# GEMINI_API_KEY=your_gemini_api_key_here
+# CHATBOT_MODEL=gemini-1.5-flash
+# CHATBOT_MAX_TOKENS=2000
+# CHATBOT_TEMPERATURE=0.7
+# CHATBOT_TIMEOUT=30000
+# CHATBOT_FUNCTION_TIMEOUT=60000
+# CHATBOT_MAX_CONVERSATIONS=50
 
