Enhance AI service configuration and Docker setup
- Updated .dockerignore to exclude additional virtual environments, IDE files, OS-generated files, and temporary files.
- Refactored Dockerfile for a multi-stage build to optimize image size and improve dependency management.
- Modified env.example to include new environment variables for RAG configuration and chatbot settings.
- Updated requirements.txt to include new dependencies for LangChain, MongoDB, and text processing.
- Improved main.py to include RAG router with error handling for better integration.

--- a/ai-service/env.example
+++ b/ai-service/env.example
@@ -1,5 +1,5 @@
 # Server Configuration
-PORT=8000
+PORT=8001
 HOST=0.0.0.0
 LOG_LEVEL=INFO
 
@@ -14,6 +14,23 @@ ALLOWED_ORIGINS=http://localhost:4000,http://localhost:5173
 # API Authentication
 API_KEY=
 
+# JWT Configuration (should match backend JWT_SECRET for shared authentication)
+JWT_SECRET=
+JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
+
 # Face Registration Configuration
 MIN_REGISTRATION_IMAGES=
 MAX_REGISTRATION_IMAGES=
+
+# RAG Configuration (MongoDB Atlas Vector Search)
+MONGODB_ATLAS_CLUSTER_URI=mongodb+srv://username:password@cluster.mongodb.net/?retryWrites=true&w=majority
+GOOGLE_API_KEY=your_google_api_key_here
+VECTOR_SEARCH_INDEX_NAME=vector_index
+RAG_COLLECTION_NAME=documents
+CONVERSATIONS_COLLECTION_NAME=rag_conversations
+
+# Chatbot Configuration
+CHATBOT_MAX_CONVERSATIONS=50
+CHATBOT_MAX_MESSAGES=50
+CHATBOT_TEMPERATURE=0.7
+CHATBOT_MAX_TOKENS=2000
