--- a/ai-service/.dockerignore
+++ b/ai-service/.dockerignore
@@ -1,34 +1,103 @@
-# Virtual environment
+# Virtual environments (massive - exclude all variants)
 venv/
+.venv/
+.venv*/
+venv*/
+env/
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
+*.py[cod]
+*$py.class
+.Python
 
-# IDE
+# IDE and editors
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
+.project
+.classpath
+.settings/
 
-# OS
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+Desktop.ini
 
-# Logs
+# Logs and temporary files
 *.log
-
-# Models (will be downloaded at runtime)
-models/*.onnx
-models/*.bin
-
-# Temporary files
 *.tmp
+*.temp
 .cache/
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
 
-# Fly.io files
-fly.toml
+# AI Models and large data files (mount via Fly.io volumes)
+models/
+*.onnx
+*.bin
+*.pth
+*.pkl
+*.h5
+*.pb
+*.tflite
+*.model
+*.safetensors
+*.gguf
+data/
+datasets/
+checkpoints/
+weights/
+embeddings/
+
+# Documentation (not needed in container)
+*.md
+README*
+docs/
+documentation/
+
+# Development files
+.env
+.env.*
+!.env.example
+docker-compose*.yml
+Makefile
 
 # Git
 .git/
 .gitignore
+.github/
+
+# Fly.io deployment files
+fly.toml
+
+# Node.js (if any mixed setup)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn
+
+# Python distribution
+build/
+dist/
+*.egg-info/
+.eggs/
+
+# Testing
+tests/
+test_*.py
+*_test.py
+conftest.py
