--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,11 @@
   "outputDirectory": "frontend/dist",
   "installCommand": "npm install --prefix frontend",
   "framework": "vite",
+  "functions": {
+    "frontend/package.json": {
+      "nodeVersion": "18"
+    }
+  },
   "rewrites": [
     {
       "source": "/(.*)",
