Revert "Remove invalid nodeVersion from vercel.json (use engines in frontend/package.json instead)"
This reverts commit 9bf48a6f32367b14dc134f6f45ec92fec5893360.

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
   "outputDirectory": "frontend/dist",
   "installCommand": "npm install --prefix frontend",
   "framework": "vite",
+  "nodeVersion": "18",
   "rewrites": [
     {
       "source": "/(.*)",
