--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,15 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
+  "engines": {
+    "node": "22.11.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "npm rebuild"
   },
   "dependencies": {
     "@tensorflow-models/blazeface": "^0.1.0",
