--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.1.0",
   "engines": {
-    "node": ">=20 <21"
+    "node": "22.11.0"
   },
   "workspaces": [
     "backend",
