Add .nvmrc file and update Node.js engine version in package.json and package-lock.json
- Introduced a new .nvmrc file specifying Node.js version 22.
- Updated Node.js engine version to 22.x in package.json and package-lock.json.
- Modified build and install commands in vercel.json for consistency.
- Enhanced frontend env.example with additional configuration options for face registration and RAG service.

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,9 +1,18 @@
-# Server Port 
-VITE_PORT=
-
-# API & Socket.io Server URL
+# API & Socket.io Server URL (required)
+# Example: https://api.smartattendance.com or http://localhost:4000
 VITE_API_URL=
 
-# Chatbot Configuration (migrated to RAG system)
+# Chatbot Configuration (optional)
+# Enable/disable chatbot feature (default: true)
 VITE_CHATBOT_ENABLED=true
-VITE_RAG_SERVICE_URL=http://localhost:8001
+
+# RAG Service URL for AI chatbot (optional)
+# Example: https://rag-service.smartattendance.com or http://localhost:8001
+VITE_RAG_SERVICE_URL=
+
+# Face Registration Configuration (optional)
+# Minimum number of images required for face registration (default: 5)
+VITE_MIN_REGISTRATION_IMAGES=5
+
+# Maximum number of images allowed for face registration (default: 10)
+VITE_MAX_REGISTRATION_IMAGES=10
