--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "type": "module",
   "engines": {
-    "node": "22.x"
+    "node": "20.x"
   },
   "scripts": {
     "dev": "vite",
@@ -49,6 +49,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "globals": "^15.0.0",
     "postcss": "^8.5.6",
+    "rollup": "^4.28.1",
     "tailwindcss": "^4.1.16",
     "typescript": "^5.3.3",
     "vite": "^5.1.3"
