--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,7 @@
   "framework": "vite",
   "build": {
     "env": {
+      "NODE_VERSION": "20.18.1",
       "NODE_OPTIONS": "--max_old_space_size=4096"
     }
   },
