--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "analyze": "vite build --mode analyze",
+    "size-limit": "size-limit"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.8",
     "@tensorflow-models/blazeface": "^0.1.0",
     "@tensorflow/tfjs": "^4.21.0",
     "axios": "^1.9.0",
@@ -30,18 +33,22 @@
     "react-i18next": "^16.3.5",
     "react-is": "^19.2.0",
     "react-router-dom": "^6.22.1",
+    "react-window": "^1.8.10",
     "recharts": "^3.4.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "web-vitals": "^4.2.4",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
+    "@size-limit/preset-app": "^11.0.0",
     "@tailwindcss/postcss": "^4.1.16",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/react-window": "^1.8.8",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
@@ -50,8 +57,12 @@
     "globals": "^15.0.0",
     "postcss": "^8.5.6",
     "rollup": "^4.28.1",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "size-limit": "^11.0.0",
     "tailwindcss": "^4.1.16",
+    "terser": "^5.46.0",
     "typescript": "^5.3.3",
-    "vite": "^5.1.3"
+    "vite": "^5.1.3",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
