--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,4 @@
 {
-  "buildCommand": "cd frontend && npm run build",
-  "outputDirectory": "frontend/dist",
-  "framework": "vite",
   "headers": [
     {
       "source": "/assets/(.*)",
@@ -13,7 +10,7 @@
       ]
     },
     {
-      "source": "/*.js",
+      "source": "/(.*)\\.js",
       "headers": [
         {
           "key": "Cache-Control",
@@ -22,7 +19,7 @@
       ]
     },
     {
-      "source": "/*.css",
+      "source": "/(.*)\\.css",
       "headers": [
         {
           "key": "Cache-Control",
@@ -31,7 +28,7 @@
       ]
     },
     {
-      "source": "/*.webp",
+      "source": "/(.*)\\.webm",
       "headers": [
         {
           "key": "Cache-Control",
@@ -40,7 +37,7 @@
       ]
     },
     {
-      "source": "/*.avif",
+      "source": "/(.*)\\.mp4",
       "headers": [
         {
           "key": "Cache-Control",
@@ -49,7 +46,16 @@
       ]
     },
     {
-      "source": "/*.woff2",
+      "source": "/(.*)\\.webp",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/(.*)\\.avif",
       "headers": [
         {
           "key": "Cache-Control",
@@ -74,12 +80,6 @@
           "value": "public, max-age=86400"
         }
       ]
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
     }
   ]
 }
