feat: Enhance AI service with error handling and fallback mechanisms
- Updated FastAPI application to include a fallback router for RAG service, providing clear 503 responses when the service is unavailable.
- Improved error logging for RAG router import failures, including detailed stack traces.
- Adjusted health check logic in the frontend to allow chatbot functionality based on MongoDB connection status.
- Ensured GOOGLE_API_KEY is always treated as a string in configuration to prevent type issues.
- Updated README with new virtual environment setup instructions for the AI service.

--- a/ai-service/env.example
+++ b/ai-service/env.example
@@ -23,7 +23,7 @@ MIN_REGISTRATION_IMAGES=
 MAX_REGISTRATION_IMAGES=
 
 # RAG Configuration (MongoDB Atlas Vector Search)
-MONGODB_ATLAS_CLUSTER_URI=mongodb+srv://username:password@cluster.mongodb.net/?retryWrites=true&w=majority
+MONGODB_ATLAS_CLUSTER_URI=
 GOOGLE_API_KEY=your_google_api_key_here
 VECTOR_SEARCH_INDEX_NAME=vector_index
 RAG_COLLECTION_NAME=documents
